<resources>
    <!--  apps string  -->
    <string name="app_name">Kasir</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="my_email">muhafrinal@gmail.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_account">Not have account yet ?</string>
    <string name="register">Register !</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_note">By Pressing \'Register\' you agree to our</string>
    <string name="txt_terms_condition"><u>Terms &amp; Condition</u></string>
    <string name="dashboard">Dashboard</string>

    <!--  Dashboard menu  -->
    <string-array name="menu_name">
        <item>Kelola Produk</item>
        <item>Pegawai</item>
        <item>Outlet</item>
        <item>Pesanan Barang</item>
        <item>Pembiayaan</item>
        <item>Bayar Tagihan</item>
    </string-array>

    <array name="menu_img">
        <item>@drawable/produk</item>
        <item>@drawable/pegawai</item>
        <item>@drawable/outlet</item>
        <item>@drawable/pesan_barang</item>
        <item>@drawable/pembiayaan</item>
        <item>@drawable/bayar_tagihan</item>
    </array>

    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="transaksi">Transaksi</string>
    <string name="username">Username</string>
    <string name="akun">Akun</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="email">Email</string>
    <string name="outlet">Outlet</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="s_i_g_n_i_n">S I G N  I N</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
</resources>
