<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard"/>

        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_transaction"
            android:title="@string/transaksi"/>
    </group>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black"
                android:title="@string/edit_profile"/>
        </menu>
    </item>
</menu>
