<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_layout"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_back_register"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/ic_arrow_back_primary_24dp"/>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_shape_white"
                    android:padding="25dp"
                    android:tint="@color/grey_20"
                    app:srcCompat="@drawable/ic_photo_camera" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_email"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/edt_username"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/username"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/edt_password"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_full_name"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/full_name"
                        android:minHeight="40dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/edt_outlet"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/outlet"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/btn_create_account"
                        style="@style/RippleStyleWhite"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/deep_orange_500">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/create_account"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                            android:textColor="@android:color/white" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/blue_grey_300" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginLeft="4dp"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/deep_orange_500"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>